packages/typ/tests/fixtures/diagnostics/0792_polyvar_call_wrong_tag_04.ml
let read_delta : [ `A | `B ] -> int = function
  | `A -> 3
  | `B -> 4

let _ = read_delta `C
